2008-11-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: More bugfixes affecting key placement.
	Bug #2163532

2008-10-31  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot): Draw key entry line samples for pm3d
	surfaces with contours.  Fix vertical positioning of key text relative
	to the key box. Do not clip key text to plot boundaries, since the
	key may be outside the plot.
	Bug #2163532

	* src/save.c (save_set_all): Missing "at" keyword for user placement
	of key box.

	* src/set.c src/tables.c src/tables.h:  'set key notitle'

2008-10-30  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics) src/axis.h: Use a more complete test for
	round-off error when the increment between axis tics is close to the
	precision of the floating point representation.
	Bug #2209654

2008-10-29  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:
	Add documentation for variable linecolor and using pseudocolumns.
	Remove ancient comments about HP printers.

2008-10-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (apply_pm3dcolor): Only take the color, not the
	dot-dash pattern.

	* src/graph3d.c (plot3d_lines plot3d_lines_pm3d): Apply "lc variable"
	to splot with lines.

2008-10-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_cntrparam): Allow iterative addition to the list of
	contour levels:     set for [i=1:N:inc] cntr level discrete i

	* src/graph3d.c (check_for_variable_color) src/misc.c (lp_parse) 
	src/graphics.c (check_for_variable_color) plot3d.c (get_3ddata):
	New colorspec:   'lc variable'
	Read linestyle index from data column, look up corresponding color.

2008-10-16  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc rev 1.539

2008-10-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_polygon): Do not clip polygon edges to the graph